# jj_cmake_template

./: .gitignore  CMakeLists.txt  README.md
include/utility/: cr_printer.h  jj_msg_tag.h  jj_printer.h  jj_timer.h
include/version_info/: version.h  version.h.in
scripts/: dummy_test_case_test.sh
src/utility/: cr_printer.cpp  jj_printer.cpp  jj_timer.cpp
tests/: CMakeLists.txt  bin_generator.cpp  dummy_test_case.cpp  hello.cc  hello_corerain.cpp  hello_jj.cc
