#No need to touch this CMakeLists in most cases.
file(GLOB TESTS *cpp *cc)

foreach(TEST_CASE ${TESTS})
    get_filename_component(FILE_NAME ${TEST_CASE} NAME_WE)
    get_filename_component(EXT_NAME ${TEST_CASE} EXT)
    add_executable(${FILE_NAME} ${FILE_NAME}${EXT_NAME})
    if(NOT "${SRC}" STREQUAL "")
        target_link_libraries(${FILE_NAME} ${PROJECT_NAME})
    endif()
    # Make a list of test cases
    if("${AVAIL_TCS}" STREQUAL "")
        set(AVAIL_TCS "${FILE_NAME}")
    else()
        set(AVAIL_TCS "${AVAIL_TCS};${FILE_NAME}")
    endif()
endforeach(${TEST_CASE})

# Print build summary
message("")
message("${MSG_TAG}********CMAKE BUILD SUMMARY********")
message("${MSG_TAG}Project Name    : ${PROJECT_NAME}")
message("${MSG_TAG}Project Version : ${PROJECT_VERSION}")
message("${MSG_TAG}Build Type      : ${CMAKE_BUILD_TYPE}")
message("${MSG_TAG}Bin Output Path : ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
message("${MSG_TAG}Lib Output Path : ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
set(TMP_IND 1)
foreach(APP ${AVAIL_TCS})
    if("${TMP_IND}" STREQUAL "1")
        message("${MSG_TAG}Test Cases      : ${APP}")
        set(TMP_IND 0)
    else()
        message("${MSG_TAG}                  ${APP}")
    endif()
endforeach(${APP})
message("${MSG_TAG}********CMAKE BUILD SUMMARY********")
message("")
